fix/scrollbar, colorpicker, fonts

--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./Skranji-Regular.ttf") format('ttf');
+  src: url("./Skranji-Regular.ttf");
 }
 
 @font-face {
@@ -11,5 +11,5 @@
   font-style: bold;
   font-weight: 700;
   font-display: swap;
-  src: url("../fonts/Skranji-Bold.ttf");
+  src: url("./Skranji-Bold.ttf");
 }
